# MagicDocs

./: Jenkinsfile  README.md
database/: .env.example  Dockerfile  init-db.sh  manage.sh
e2e/: .dockerignore  .env.example  .gitignore  Dockerfile  files.ts  manage.sh  package-lock.json  package.json  playwright.config.ts
e2e/tests/: auth.spec.ts  global.setup.ts  global.teardown.ts  project-access.spec.ts  project-admin.spec.ts  project-user.spec.ts
keycloak/: .env.example  Dockerfile  manage.sh  realm-export.json
server/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  input.css  manage.sh  tailwind.config.js
server/entity/: Cargo.toml
server/entity/src/: document.rs  document_version.rs  embedding.rs  lib.rs  prelude.rs  project.rs  project_version.rs  role_permission.rs  sea_orm_active_enums.rs  user_permission.rs
server/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20240422_000001_create_tables.rs  m20240510_000002_create_embedding_table.rs  m20240516_000003_add_finalized_column.rs  m20240516_000004_alter_role_permission_role_id_type.rs
server/src/: fallback.rs  lib.rs  main.rs  responses.rs  server.rs
server/src/database/: document_repo.rs  document_version_repo.rs  embedding_repo.rs  mod.rs  permission_repo.rs  project_repo.rs  project_version_repo.rs
server/src/keycloak/: admin.rs  cache.rs  enums.rs  jwk.rs  mod.rs  response_types.rs
server/src/langchain/: constants.rs  embedding.rs  enums.rs  mod.rs  models.rs  openai.rs
server/src/markdown/: mod.rs
server/src/middleware/: authentication.rs  authorization.rs  context_builder.rs  context_setter.rs  headers.rs  mod.rs  responses.rs
server/src/models/: embedding.rs  mod.rs  similarity_search_result.rs  slugs.rs
server/src/models/dto/: documents.rs
server/src/models/form_data/: chat.rs  documents.rs  mod.rs  project.rs  role.rs
server/src/parsing/: html.rs  markdown.rs  mod.rs
server/src/routes/: admin.rs  auth.rs  browser_sync.rs  chat.rs  document.rs  index.rs  logout.rs  mod.rs  projects.rs
server/src/server_functions/: admin.rs  app_data.rs  chat.rs  documents.rs  mod.rs  projects.rs
server/src/server_functions/models/: app_data.rs  documents.rs  mod.rs  permission.rs  project.rs  user.rs
server/src/utils/: claims.rs  config.rs  context_data.rs  cookies.rs  extractor.rs  info.rs  mod.rs  tera_testers.rs  traits.rs
server/src/wasm/: app.rs  layout.rs  mod.rs  types.rs
server/src/wasm/components/: chat_panel.rs  crawler.rs  document_content.rs  editor.rs  error_template.rs  finalize_button.rs  header.rs  mod.rs  outlet.rs  sidebar.rs
server/src/wasm/components/icons/: bot_icon.rs  description.rs  expand.rs  home.rs  mod.rs  pen.rs  person_circle.rs  spinner.rs  title.rs  trash.rs  triangle_down.rs
server/src/wasm/components/modals/: finalizing_modal.rs  mod.rs  modal_base.rs  modal_controller.rs
server/src/wasm/routes/: admin.rs  admin_layout.rs  admin_role.rs  admin_roles.rs  admin_user.rs  admin_users.rs  document.rs  document_new.rs  home.rs  mod.rs  project.rs  project_layout.rs  project_new.rs
server/src/web_crawler/: crawler.rs  mod.rs  robots_txt.rs  spider.rs
server/src/web_crawler/test_files/: bbc.com.robots.txt  edition.cnn.com.robots.txt  googe.com.robots.txt  rust-lang.html
server/style/: tailwind.css
server/templates/: base.html  footer.html  header.html  index.html  sidebar.html
server/templates/admin/: dashboard.html  layout.html  permissions.html  role.html  roles.html  user.html  users.html
server/templates/projects/: details.html  layout.html  new.html
server/templates/projects/documents/: details.html  new.html
server/templates/projects/documents/new/: crawler.html  editor.html  layout.html
server/templates/snippets/: chat_panel.html  editor.html  finalise_project_button.html
server/typescript/: htmx.d.ts  package-lock.json  package.json  rollup.config.js  tsconfig.json
server/typescript/src/: browser-sync-client.ts  chat-panel.ts  chat.ts  crawler.ts  editor.ts  global.ts  main.ts  manage-user.ts  project-finalize-sse.ts  role-permissions.ts  test.ts
server/typescript/src/lib/: chat-models.ts  chat-panel.ts  chat-sse.ts  helloworld.ts  keybinds.ts  sse.ts
