[package]
name = "magicdocs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
migration = { path = "./migration" }
entity = { path = "./entity" }
actix-web = "4.5.1"
dotenvy = "0.15.7"
env_logger = "0.11.3"
serde = "1.0.198"
tera = "1.19.1"
tracing = "0.1.40"
keycloak = "24.0.200"
reqwest = "0.12.3"
tokio = { version = "1.37.0", features = ["sync"] }
futures-util = "0.3.30"
lru = "0.12.3"
jsonwebtoken = "9.3.0"
actix-files = "0.6.5"
async-stream = "0.3.5"
anyhow = "1.0.82"
comrak = "0.23.0"

[dev-dependencies]
rstest = "0.19.0"

[profile.release]
strip = true
lto = true
