[package]
name = "magicdocs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
migration = { path = "./migration" }
entity = { path = "./entity" }
dotenvy = "0.15.7"
env_logger = "0.11.3"
serde = "1.0.198"
serde_json = "1.0.116"
tera = "1.19.1"
tracing = "0.1.40"
keycloak = "24.0.200"
reqwest = "0.12.3"
tokio = { version = "1.37.0", features = ["sync"] }
futures-util = "0.3.30"
lru = "0.12.3"
jsonwebtoken = "9.3.0"
async-stream = "0.3.5"
anyhow = "1.0.82"
comrak = "0.23.0"
scraper = "0.19.0"
regex = "1.10.4"
axum = "0.7.5"
axum-extra = { version = "0.9.3", features = ["cookie"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["trace", "fs"] }
url = "2.5.0"
time = "0.3.36"
http = "1.1.0"
html2md = "0.2.14"
llm-chain = "0.13.0"
llm-chain-openai = "0.13.0"
text-splitter = { version = "0.13.1", features = ["markdown", "tiktoken-rs"] }
tiktoken-rs = "0.5.8"

[dev-dependencies]
mockito = "1.4.0"
rstest = "0.19.0"

[profile.release]
strip = true
lto = true

# [target.x86-64-unknown-linux-musl]
# rustflags = [
#     "-C", "target-feature=-crt-static",
# ]

# [target.aarch64-unknown-linux-musl]
# rustflags = [
#     "-C", "target-feature=-crt-static",
# ]
